k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-py
  labels:
    app: hello-world-py
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hello-world-py
  template:
    metadata:
      labels:
        app: hello-world-py
    spec:
      containers:
      - name: hello-world-py
        image: jfrog.yourdomain.com/docker-local/hello-world-py:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
      imagePullSecrets:
      - name: jfrog-registry-secret
