k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-world-py-service
spec:
  type: ClusterIP
  selector:
    app: hello-world-py
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
